@@ -1,3 +1,8 @@
+<b>Version 1.3.2:</b><br/><br/>
+    &#8226; Higher quality YouTube thumbnails</br>
+    &#8226; Better stability
+</br>
+
 <b>Version 1.3.0:</b><br/><br/>
     &#8226; TweetMarker support<br/>
     &#8226; TwitLonger support<br/>
